--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title></title>
 </head>
 <body>
 	Hello world
+
+	Привіт Фізмат!
 
 </body>
 </html>
